[package]
name = "rumsim"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros", "sync"] }
rumqttc = { version = "0.23", features = ["url"] }

[dev-dependencies]
mockall = "0.11"
regex = "1.10.3"
