[package]
name = "rumsim"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros", "sync"] }
rumqttc = { version = "0.23", features = ["url"] }
chrono = "0.4.35"
opentelemetry = { version = "0.22.0", features = ["metrics", "otel_unstable"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.14.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tonic = "0.11.0"

[dev-dependencies]
mockall = "0.11"
regex = "1.10.3"
