[package]
name = "rumsim"
version = "0.1.3"
edition = "2021"

[dependencies]
lazy_static = "1.4"
rand = "0.8"
futures = "0.3"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
rumqttc = { version = "0.24", features = ["url"] }
chrono = "0.4.37"
opentelemetry = { version = "0.22.0", features = ["metrics", "otel_unstable"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.14.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tonic = "0.11.0"

[dev-dependencies]
mockall = "0.12"
regex = "1.10.4"
